--- a/submit_pag.html
+++ b/submit_pag.html
@@ -135,7 +135,7 @@
             <button id="verify">Verify OTP</button>
         </div>
         <div class="form-footer">
-            Already have an account? <a href="login.html">Login here</a>
+            Already have an account? <a href="log_in.html">Login here</a>
         </div>
     </form>
     
