--- a/cart.html
+++ b/cart.html
@@ -21,6 +21,7 @@
                 <a class="home" href="#">Fashion</a>
                 <a class="home" href="#">CONTACT</a>
                 <button onclick="viewCart()"><i class="fa-solid fa-cart-shopping"></i> Cart</button>
+                <button onclick="Logout()" class="logout">Logout</button>
             </div>
         </div>
     </header>
@@ -143,6 +144,11 @@
 }
 
        }
+       function toggleMenu() {
+    const navLinks = document.querySelector(".nav-links");
+    navLinks.classList.toggle("active");
+}
     </script>
+    <script src="script.js"></script>
 </body>
 </html>
